--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.17",
     "esbuild": "^0.16.10",
     "esbuild-register": "^3.4.2",
     "typescript": "^4.9.4"
